--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDGE Project</title>
+    <title>Class 02</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to EDGE project.</h1>
-    <p>I'm a student of BAIUST.</p>
+    <h1>Use of link tag</h1>
+    <img src="images/download.png"
+    <ul class="css">
+        <li>
+            <a href="https://www.google.com">Google</a>
+        </li>
+        <li>
+            <a href="https://www.bing.com">Bing</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://github.com">Github</a>
+        </li>
+        <li>
+            <a href="My_Profile.html">Profile</a>
+        </li>
+    </ul>
 </body>
 </html>
